--- a/css/main.css
+++ b/css/main.css
@@ -3909,7 +3909,7 @@ input, select, textarea {
 .ptop{
   margin-bottom: 4px;	
 }
-#tabs-1,#tabs-2{	
+#tabs-1,#tabs-2,#tabs-3{	
 	height: 40em;
 }
 .pclick{
@@ -3918,8 +3918,13 @@ input, select, textarea {
 .pclick:hover{
 	background-color: rgba(252,252,252,0.28);	
 }
+.tsel td:first-child{
+	border-left-width: 4px !important;
+	border-left: 4px solid rgba(171,27,217,0.66);
+}
 .tsel,.tsel:hover{
-	background-color: rgba(243,8,12,1.00);
+	background-color: rgba(252,252,252,0.28);
+	color:white;
 	-webkit-transition: background-color 20ms linear;
     -ms-transition: background-color 20ms linear;
     transition: background-color 1000ms linear;
